--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,7 @@
 
 html {
   box-sizing: border-box;
-  color: #dcd4cd;
-
+  font-family: Georgia, serif;
 }
 
 *, *::before, *::after {
@@ -15,9 +14,43 @@ html {
 }
 
 body {
-  background-color: #cabdb2;
-  border: 3px  solid;
+  background-color: #f0eee8;
+}
+
+article {
+  display: block;
+  background-color: #dcd4cd;
+  border: 3px #9a816d solid;
   border-radius: 3px;
+  padding: 1rem;
+}
+
+article:hover {
+  background-color: #cabdb2;
+}
+
+.list {
+  display: inline-block;
+  color: #512200;
+  text-decoration: none;
+}
+
+.list-2 {
+  font-style: italic;
+  color: #512200;
+  text-decoration: none;
+}
+
+.link-card h2 {
+  font-family: Dosis, sans-serif;
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin: 0 0 1rem;
+}
+
+header {
+  color: #512200;
+  text-decoration: none;
 }
 
 .link-card {
@@ -25,24 +58,16 @@ body {
   text-decoration: none;
 }
 
-a {
-  text-decoration: none;
-}
-
-.link-card:hover {
-
-}
-
-.link-card h2 {
-
-}
 
 .btn {
+  margin: auto;
+  display: block;
+  padding: .5em;
   background-color: #785439;
   color: #fff;
   text-align: center;
-}
-
-.btn:hover {
-  background-color: #512200;
+  font-family: Dosis, sans-serif;
+  font-weight: bold;
+  border-radius: 8px;
+  max-width: 7em;
 }
